--- a/RessourcesRelationnellesFront/package.json
+++ b/RessourcesRelationnellesFront/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-router-app",
+  "name": "Projects/RessourcesRelationnellesFront",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,7 +12,7 @@
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "isbot": "^5.1.22",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5"
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.6",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "react-router-devtools": "^1.1.4",
