--- a/RessourcesRelationnellesFront/package.json
+++ b/RessourcesRelationnellesFront/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
@@ -26,7 +27,7 @@
     "react-router-devtools": "^1.1.4",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3",
-    "vite": "^6.1.1",
+    "vite": "^6.2.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
